--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Html 5</title>
+    <title>Test Html5 Semantic</title>
+    <!-- [if lt IE 9] >
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <! [end if] -->
 </head>
+
 <body>
-    
+    <header>
+        <h1>Testing html </h1>
+    </header>
+    <main>
+        <h2>Title main</h2>
+        <article>
+            <h3>Article 1</h3>
+            <section>
+                <header>
+                    <h4>Section 1</h4>
+                    <p>By xAuthor</p>
+                    <p>Posted on 05 jav. 2021</p>
+                </header>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam voluptas similique illum enim! Saepe,
+                    incidunt!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam voluptas similique illum enim! Saepe,
+                    incidunt!
+                </p>
+            </section>
+        </article>
+    </main>
+    <aside>
+        <div class="category">
+            <h3>Categories</h3>
+            <ul>
+                <li>Info</li>
+                <li>Semantic</li>
+                <li>Api</li>
+            </ul>
+        </div>
+    </aside>
+    <footer>
+        <p>test1 &copy;copyright 2021</p>
+    </footer>
 </body>
+
 </html>
