add nav to index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 
 <body>
     <header>
-        <h1>Testing html </h1>
+        <h1>Testing html t</h1>
+        <nav>
+            <ul>
+                <li><a href="#1">Home</a></li>
+                <li><a href="#2">Blog</a></li>
+                <li><a href="#3">News</a></li>
+                <li><a href="#4">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h2>Title main</h2>
@@ -32,6 +40,22 @@
                 </p>
             </section>
         </article>
+        <article>
+            <h3>Article 2</h3>
+            <section>
+                <header>
+                    <h4>Section 1</h4>
+                    <p>By xAuthor</p>
+                    <p>Posted on 02 jav. 2021</p>
+                </header>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam voluptas similique illum enim! Saepe,
+                    incidunt!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam voluptas similique illum enim! Saepe,
+                    incidunt!
+                </p>
+            </section>
+        </article>
     </main>
     <aside>
         <div class="category">
@@ -41,6 +65,13 @@
                 <li>Semantic</li>
                 <li>Api</li>
             </ul>
+        </div>
+        <div class="performance">
+            <h3>Performance</h3>
+            Disk usage C:
+            <meter id="disk_c" value="2" min="0" max="10">20%</meter><br>
+            Disk usage D:
+            <meter id="disk_d" value="8" min="0" max="10">80%</meter>
         </div>
     </aside>
     <footer>
