update aside width style to index

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
             </section>
             <section class="performance">
                 <h3>Performance</h3>
-                Disk usage C:
+                <label> Disk usage C:</label>
                 <meter id="disk_c" value="2" min="0" max="10">20%</meter><br>
-                Disk usage D:
+                <label> Disk usage C:</label>
                 <meter id="disk_d" value="8" min="0" max="10">80%</meter>
             </section>
         </aside>
